deploy: 0fa2ceed26579d0b3533edb2fb31bfb5212f4121

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
-<title>Glossary</title>
+<title>TEv2 Test Glossary</title>
 </head>
 <body>
 <div class="glossary-container">
-<h1>Glossary</h1>
+<h1>TEv2 Test Glossary</h1>
 <ul class="glossary-list">
 </ul>
 </div>
