--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
-<title>TEv2 Test Glossary</title>
-</head>
-<body>
-<div class="glossary-container">
-<h1>TEv2 Test Glossary</h1>
-<ul class="glossary-list">
-</ul>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>TEv2 Test Glossary</title>
+  </head>
+  <body>
+    <div class="glossary-container">
+      <h1>TEv2 Test Glossary</h1>
+      <ul class="glossary-list"></ul>
+    </div>
+  </body>
+
+  <footer>© 2022 Aviary Tech</footer>
 </html>
